# riscv-scratch

./: .bashrc  .gitignore  Dockerfile  README.md  entrypoint.sh  my_design.v  tb_processor.v
.devcontainer/: devcontainer.json
firmware/: gcc_commands.sh
firmware_template/: CMakeLists.txt
soc/femtorv32/: tb_processor.v
soc/femtorv32/firmware/: CMakeLists.txt  main.c  start.S
soc/femtorv32/src/: device_select.v  femtorv32_quark.v  top.v
soc/gpio_corsair/: run.sh  tb_processor.v  waves.tcl
soc/gpio_corsair/firmware/: CMakeLists.txt  main.c
soc/gpio_corsair/ip/: csrconfig  regs.yaml
soc/gpio_corsair/src/: device_select.v  femtorv32_quark.v  top.v
soc/i2c_uart_gpio/: run.sh  tb_processor.v  waves.tcl
soc/i2c_uart_gpio/firmware/: CMakeLists.txt  main.c  start.S
soc/i2c_uart_gpio/ip/gpio/: csrconfig  regs.yaml
soc/i2c_uart_gpio/ip/i2c/: csrconfig  i2c_master.v  i2c_master_ip.v  regs.yaml  run_testbench.sh  simple_testbench.v  waves.tcl
soc/i2c_uart_gpio/ip/uart/: csrconfig  uart_ip.v
soc/i2c_uart_gpio/src/: Memory.v  device_select.v  femtorv32_quark.v  picorv32.v  top.v
soc/uart_corsair/: run.sh  tb_processor.v  waves.tcl
soc/uart_corsair/firmware/: CMakeLists.txt  sections.lds
soc/uart_corsair/ip/gpio/: csrconfig
soc/uart_corsair/ip/uart/: csrconfig  regs.yaml
soc/uart_corsair/src/: device_select.v  top.v  uart_ip.v  uart_tx.v
src/: top.v
tools/: riscv.cmake
